array.island.Island.scala.error
Compilation error:
Island:2: error: not found: type int
var liste=Array[int](0)
                ^